# PolicyStack

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ADR.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHARTER.md  CITATION.cff  CLAUDE.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FUNCTIONAL_REQUIREMENTS.md  GOVERNANCE.md  MIGRATION_FROM_FEDERATION.md  PLAN.md  PRD.md  README.md  SECURITY.md  SPEC.md  SPECS_INDEX.md  SSOT.md  TEST_COVERAGE_MATRIX.md  Taskfile.yml  USER_JOURNEYS.md  audit_scorecard.json  codecov.yml  deny.toml  gitleaks.toml  justfile  llms.txt  package-lock.json  package.json  policy_lib.py  pre-commit-config.yaml  process-compose.yml  pyproject.toml  (+5 more)
.agileplus/: worklog.md
.github/: CODEOWNERS
.phenotype/: ai-traceability.yaml  policy.yaml.template
.vitepress-dist/: 404.html  FUNCTIONAL_REQUIREMENTS.html  hashmap.json  index.html
agent-scope/: policy_contract.schema.json  policy_wrapper.schema.json  schema.json
cli/: pyproject.toml
cli/src/policy_federation/: __init__.py  authorization.py  claude_hooks.py  cli.py  cli_parsers.py  compiler.py  config_loader.py  constants.py  delegate.py  gap_detector.py  headless_review.py  integrations.py  interceptor.py  learner.py  policy_diff.py  policy_editor.py  resolver.py  resolver_extensions.py  resolver_layers.py  resolver_merge.py  risk.py  runtime_artifacts.py  runtime_config_patches.py  runtime_context.py  runtime_launchers.py  validate.py
contracts/: run-metadata.yaml  session-sidecar.schema.json
docs/: FUNCTIONAL_REQUIREMENTS.md  SSOT.md  index.md
(+1577 files in other folders)
